# thingino-firmware

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Config.dev.in  Config.in  Config.in.host  Config.isp.in  Config.sensor.in  Config.soc.in  Config.soc.in.backup  Config.soc_config.in  Dockerfile  Makefile  Makefile.container  Makefile.docker  Makefile.guided  Makefile.openipc  README.md  all  board.mk  build-container.sh  building-retired.sh  building.sh  common.mk  docker-build.sh  external.desc  external.mk  go2rtc.yml  local.mk.template  local.uenv.txt  mediamtx.yml  olddefconfig  packages.txt  sensor.mk  test_prudynt_migration.sh  (+3 more)
.augment/: project.yml
.githooks/: pre-commit
.github/: copilot-instructions.md
br-ext-chip-allwinner/: Config.in
br-ext-chip-ambarella/: Config.in
br-ext-chip-anyka/: Config.in
br-ext-chip-fullhan/: Config.in
br-ext-chip-goke/: Config.in
br-ext-chip-grainmedia/: Config.in
br-ext-chip-hisilicon/: Config.in
br-ext-chip-ingenic/: Config.in
br-ext-chip-novatek/: Config.in
br-ext-chip-rockchip/: Config.in
br-ext-chip-sigmastar/: Config.in
br-ext-chip-ti/: Config.in
br-ext-chip-xiongmai/: Config.in
br-ext-openipc/: Config.in
cameras/: cinnado_d1_t23n_sc2336_atbm6012b  cinnado_d1_t31l_sc2336_atbm6031  escam_g16_t21n_jxh62_mt7601u  galayou_g2_t31lc_sc2336_atbm6012b  litokam_c1_t31l_sc2336_atbm6012b  primecables_08361_t21z_sc2300_rtl8188ftv  teacup_t31zx_imx327_eth  wansview_k5_t21n_ov2735b_mt7601u  wansview_w6_t21n_ov2735b_8188fu  wyze_c3_t31al_gc2053_atbm6031  wyze_c3_t31x_gc2053_atbm6031  wyze_cp1_t20x_jxf22_rtl8189ftv  wyze_cp2_t31x_gc2053_atbm6031_ptz  wyze_cp2_t31x_gc2053_atbm6032  wyze_v2_t20x_jxf23_rtl8189ftv  wyze_v3_t31x_gc2053_rtl8189ftv  xiaomi_mjsxj03hl_t31l_jxq03p_rtl8189ftv  xiaomi_mjsxj03hl_t31n_jxq03p_rtl8189ftv
configs/: _generic_t10_defconfig  _generic_t20_defconfig  common.config  (+98 more)
package/thingino-esphome/plugins/thingino_media_player/: README.md  media_player_proto.c  media_player_proto.h  meson.build  meson_options.txt  switch_proto.c  switch_proto.h  thingino_media_player.c  thingino_media_player.h  wake_word.cpp  wake_word.h
(+10856 files in other folders)
